# rag_backend

./: .gitignore  CHAT_PAGE_SUMMARY.md  COZE_API_SUMMARY.md  README.md  UV_GUIDE.md  chat_client.py  config.example.env  main.py  pyproject.toml  requirements.txt  setup_uv.ps1  setup_uv.sh  test_chat.py
api/: schemas.py
api/routers/: chat.py  coze.py  document.py  knowledge_base.py  search.py
api/services/: document_service.py
database/: __init__.py  database.py  models.py
docs/: API_DOCUMENTATION.md  ASYNC_PROCESSING.md  CHANGES_SUMMARY.md  CHAT_API_GUIDE.md  CHAT_INTERFACE_GUIDE.md  CHAT_QUICKSTART.md  COZE_API_GUIDE.md  COZE_GUIDE.md  ENTITY_RELATION_MODEL.md  FAISS_PERSISTENCE.md  GRAPH_SEARCH_GUIDE.md  IMPLEMENTATION_SUMMARY.md  PROJECT_SUMMARY.md  QUICKSTART_ASYNC.md  QUICKSTART_NER.md  README.md  USAGE_GUIDE.md  UV_AND_FAISS_SUMMARY.md
models/: __init__.py  base.py  chunk.py  document.py  repository.py
utils/: __init__.py  chunk.py  chunk_to_ner.py  coze.py  faiss.py  file_parser.py  neo4j.py
